--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,10 @@ img {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8)),
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
     url(../img/Header.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -246,11 +249,11 @@ img {
   line-height: 1.7;
 }
 
-.advantages {
+/*.advantages {
   display: block;
   padding-right: 75px;
   padding-left: 75px;
-}
+}*/
 
 /*.foto-center {
   justify-content: center;
