--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
 
-  background-color: #e1e2eb;
+  background-color: #ffffff;
   color: #757575;
   font-family: Roboto, sans-serif;
 
@@ -206,7 +206,7 @@ img {
 }
 
 .features-itam::before {
-  contain: "";
+  content: "";
   display: block;
   height: 120px;
   background-size: contain;
