--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,12 @@ img {
   margin-top: 0px;
 }
 
+.shadov {
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .social {
   list-style: none;
   display: flex;
@@ -343,6 +349,8 @@ img {
 .social-img {
   margin-top: 16px;
   margin-bottom: 24px;
+  width: 44px;
+  height: 44px;
 }
 
 /*clients*/
@@ -361,6 +369,10 @@ img {
 
 .clients-item {
   width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
 }
 
 .clients .clients-item:not(:last-child) {
@@ -412,6 +424,7 @@ img {
 
 .footer-marrite {
   margin-right: 94px;
+  width: 206px;
 }
 
 .developed {
@@ -427,6 +440,13 @@ img {
   margin-bottom: 0px;
 }
 
+.circle {
+  background: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-size: contain;
+}
 /*---styles portfolio--*/
 
 .pro {
@@ -500,8 +520,13 @@ img {
 }
 
 .project-fish {
-  color: var(--button-color);
+  /*color: var(--button-color);*/
+  color: rgb(177, 195, 238);
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
+}
+
+.d {
+  display: block;
 }
