--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ img {
   display: flex;
   align-items: center;
 }
-}
 
 /*Logo*/
 
@@ -100,9 +99,15 @@ img {
 
   list-style: none;
   padding: 0px;
-  /*margin: 0px;*/
 }
 
+.auth-con:hover {
+  --color5: #2196f3;
+}
+
+.auth-smart:hover {
+  --color5: #2196f3;
+}
 .smart {
   width: 10px; 
   height: 15px;
@@ -219,35 +224,15 @@ img {
   margin: 0px;
 }
 
-.features-itam {
+.features-svg {
+ display: flex;
+  justify-content: center;
+  align-items: center;
   width: 270px;
-}
-
-.features-itam::before {
-  content: "";
-  display: block;
   height: 120px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
   background-color: #f5f4fa;
   border-radius: 4px;
-}
-
-.features-itam.icon-antena::before {
-  background-image: url("../img/antenna.svg");
-}
-
-.features-itam.icon-clock::before {
-  background-image: url("../img/clock.svg");
-}
-
-.features-itam.icon-diagram::before {
-  background-image: url("../img/diagram.svg");
-}
-
-.features-itam.icon-astronaut::before {
-  background-image: url("../img/astronaut.svg");
+ margin-bottom: 30px;
 }
 
 .features .features-itam:not(:last-child) {
@@ -259,12 +244,15 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .features-text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
+  margin: 0px;
 }
 
 
@@ -299,6 +287,7 @@ img {
 }
 
 /*team*/
+
 
 .section-team {
   margin-top: 0px;
@@ -340,6 +329,7 @@ img {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
+  padding-top: 30px;
 }
 
 .social {
@@ -371,11 +361,9 @@ img {
 
 .social-img:hover {
   background: var(--link-color); 
+   --color3: #ffffff;
 }
 
-.icon-social:hover {
-  --color3: #ffffff;
-}
 
 /*clients*/
 
@@ -403,16 +391,14 @@ img {
 }
 
 .clients-item:hover {
- border: 1px solid var(--link-color);  
+ border: 1px solid var(--link-color); 
+ --color3: var(--link-color); 
 }
 
 .clients .clients-item:not(:last-child) {
   margin-right: 30px;
 }
 
-.icon-clients:hover {
-  --color3: var(--link-color);
-}
 
 /*Foter*/
 
@@ -488,6 +474,7 @@ img {
 
 .circle:hover {
   background: var(--link-color);
+--color3: #ffffff;
 }
 
 /*---styles portfolio--*/
@@ -565,7 +552,6 @@ img {
 }
 
 .project-fish {
-  /*color: var(--button-color);*/
   color: rgb(177, 195, 238);
   font-weight: 400;
   font-size: 18px;
